<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="goal_creation.GoalCreationFragment">

    <EditText
        android:id="@+id/editGoalName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/goal_name"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="60dp"/>

    <EditText
        android:id="@+id/editGoalTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/goal_target"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="60dp"
        android:layout_marginVertical="190dp"/>

    <EditText
        android:id="@+id/editGoalCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/goal_current"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="60dp"
        android:layout_marginVertical="300dp"/>

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/create_goals"
        android:layout_gravity="center"/>

</FrameLayout>